fix scale and overflow problems

--- a/src/style/global/global.scss
+++ b/src/style/global/global.scss
@@ -12,7 +12,7 @@ html, body {
 .main-application{
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .hide{
