--- a/src/style/particular/center.scss
+++ b/src/style/particular/center.scss
@@ -8,9 +8,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   > iframe {
-    height: 110%;
+    height: 95%;
     border: none;
     background-color: #fff;
   }
@@ -20,7 +21,7 @@
 .click-wrapper {
   position: absolute;
   z-index: 100;
-  height: 110%;
+  height: 95%;
   width: 1200px;
   pointer-events: none;
 }
