--- a/src/style/particular/domtree.scss
+++ b/src/style/particular/domtree.scss
@@ -1,7 +1,7 @@
 /** The styling for the generated domTree by pageDomTree.js */
 .domTree {
   padding: 5px;
-  height: 300px;
+  height: 90%;
 
   > ul {
     width: calc(100% - 30px) !important;
