--- a/src/style/particular/sidebar.scss
+++ b/src/style/particular/sidebar.scss
@@ -6,6 +6,7 @@
   height: calc(100% - 40px);
   background-color: $main;
   color: $light;
+  overflow: hidden;
   user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -87,7 +88,8 @@
 
 .sidebar-bottom {
   width: 100%;
-  height: 37%;
+  height: 35%;
+  overflow: hidden;
 }
 
 .overflow {
